2004-01-27  Sven Neumann  <sven@gimp.org>
	* plug-ins/gimpressionist/brush.c
	* plug-ins/gimpressionist/gimp.c
	* plug-ins/gimpressionist/gimpressionist.[ch]
	* plug-ins/gimpressionist/paper.c
	* plug-ins/gimpressionist/presets.c: fixed a crash (bug #132027),
	got rid of some possible buffer overflows and fixed platform issues
	like hardcoding '/' as the path separator.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12175 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-01-27  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/gimpressionist/brush.c
+	* plug-ins/gimpressionist/gimp.c
+	* plug-ins/gimpressionist/gimpressionist.[ch]
+	* plug-ins/gimpressionist/paper.c
+	* plug-ins/gimpressionist/presets.c: fixed a crash (bug #132027),
+	got rid of some possible buffer overflows and fixed platform issues
+	like hardcoding '/' as the path separator.
+
 2004-01-26  Michael Natterer  <mitch@gimp.org>
 
 	* app/gui/image-menu.c (image_menu_entries): use
